# prowl

./: .gitignore  Prowlc.ml  README.md  dune  dune-project  ex.wl  make-parser.py  nano.save  prowl  prowl.ml  prowl.opam  prowl_test.ml  prowlc.ml  readme.md  silane.ml
_build/: .db  .digest-db  log
_build/default/: dune  prowl.dune-package  prowl.install
ex/: annot.prw  append2.pr  comb.prw  det_test.prw  elabtest.prw  fac.pr  fac.prw  fac1.prw  fac2.pr  fac2.prw  fac3.pr  fac_loop.prw  fib.pr  fib.prw  fib1.prowl  fib2.prw  fib3.prw  fib_main.prw  hello.prw  is-even.pr  range.prw  range2.prw  range3.prw  simple.prw  simple2.prw  simple3.prw  simple4.prw  simple5.prw  simple6.prw  temp.prw  temp2.prw  test.prw  tst.prw  tst2.prw  tst3.prw
ex/basic/: fac.prw  fac2.prowl  fac2.prw  fib.prw  fib3.prowl  fizz.prw  hello.prowl  hello.prw  stack.prowl
ex/elem/: add.prw  alt.prw  anon-broken.prw  asop-2.prw  asop-3.prw  asop.prw  capture.prw  case.prw  cli.prw  custom.prw  eithers-back.prw  eithers.prw  fib-opt.prw  hang.prw  hof.prw  impl.prw  infix.prw  (+35 more)
examples/: basic.prowl  fac.prowl  fac1.prowl  fac3.prowl  facTco.prowl  fib.prowl  fib1.prowl  fib2.prowl  fib3.prowl  hello.prowl  stack.prowl
lib/: ast.ml  cli.ml  control.ml  dune  mode.ml  name.ml  name.mli  util.ml
scratch/: add1.prw  ponder.prw  ponder2.prw  tensor.prw
src/: build.ml  cli.ml  dune  test.ml  util.ml  utils.ml
std/: stack.prw
test/: dune  prowl.ml
tree-sitter-prowl/: grammar.js  package-lock.json  package.json
tree-sitter-silane/: grammar.js  package-lock.json  package.json  test.txt
(+387 files in other folders)
